--- a/NeuroHack/NeuroHack/PlayerPage.xaml
+++ b/NeuroHack/NeuroHack/PlayerPage.xaml
@@ -7,118 +7,85 @@
              mc:Ignorable="d" NavigationPage.HasNavigationBar="False"
              x:Class="NeuroHack.PlayerPage">
 
-    <pv:PancakeView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-        <pv:PancakeView.BackgroundGradientStops>
-            <pv:GradientStopCollection>
-                <pv:GradientStop Color="#E7EDF8" Offset="0" />
-                <pv:GradientStop Color="#E3E7EE" Offset="1" />
-            </pv:GradientStopCollection>
-        </pv:PancakeView.BackgroundGradientStops>
-        <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="1.2*"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Grid Margin="20" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+    <pv:PancakeView HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" BackgroundColor="#10041f">
+        <StackLayout>
+            <Grid Margin="20">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <pv:PancakeView HeightRequest="40" Margin="0, 30, 0, 0" WidthRequest="40" CornerRadius="20" HorizontalOptions="End" 
-                            VerticalOptions="Center">
-                    <pv:PancakeView.BackgroundGradientStops>
-                        <pv:GradientStopCollection>
-                            <pv:GradientStop Color="#E3E7EE" Offset="0" />
-                            <pv:GradientStop Color="#FBFBFB" Offset="1" />
-                        </pv:GradientStopCollection>
-                    </pv:PancakeView.BackgroundGradientStops>
+                            VerticalOptions="Center" BackgroundColor="#20142d">
                     <pv:PancakeView.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding BackCommand}"/>
                     </pv:PancakeView.GestureRecognizers>
                     <Image Source="back.png" HeightRequest="15" WidthRequest="15" HorizontalOptions="Center" VerticalOptions="Center"/>
                 </pv:PancakeView>
-                <Label Grid.Column="1" Text="СЕЙЧАС ИГРАЕТ" Margin="0, 30, 0, 0" TextColor="Black" FontSize="12" Opacity="0.5" HorizontalOptions="Center" VerticalOptions="Center"/>
+                <Label Grid.Column="1" Text="Now playing" Margin="0, 30, 0, 0" FontAttributes="Bold" TextColor="#ffffff" FontSize="20" HorizontalOptions="Center" VerticalOptions="Center"/>
                 <pv:PancakeView Grid.Column="2" Margin="0, 30, 0, 0" HeightRequest="40" WidthRequest="40" CornerRadius="20" HorizontalOptions="End" 
-                            VerticalOptions="Center">
-                    <pv:PancakeView.BackgroundGradientStops>
-                        <pv:GradientStopCollection>
-                            <pv:GradientStop Color="#E3E7EE" Offset="0" />
-                            <pv:GradientStop Color="#FBFBFB" Offset="1" />
-                        </pv:GradientStopCollection>
-                    </pv:PancakeView.BackgroundGradientStops>
+                            VerticalOptions="Center" BackgroundColor="#20142d">
                     <pv:PancakeView.GestureRecognizers>
                         <TapGestureRecognizer Command="{Binding ShareCommand}"/>
                     </pv:PancakeView.GestureRecognizers>
                     <Image Source="share.png" HeightRequest="15" WidthRequest="15" HorizontalOptions="Center" VerticalOptions="Center"/>
                 </pv:PancakeView>
             </Grid>
-            <StackLayout Grid.Row="1" Spacing="25" HorizontalOptions="Center" VerticalOptions="Center">
-                <pv:PancakeView BackgroundColor="White" HeightRequest="170" WidthRequest="170" CornerRadius="85" HorizontalOptions="Center" VerticalOptions="Center" >
-                    <pv:PancakeView BackgroundColor="Gray" HeightRequest="150" WidthRequest="150" CornerRadius="75" HorizontalOptions="Center" VerticalOptions="Center">
-                        <Image Source="{Binding SelectedMusic.CoverImage}" Aspect="AspectFill" HeightRequest="150" WidthRequest="150" HorizontalOptions="Center" VerticalOptions="Center"/>
-                    </pv:PancakeView>
-                </pv:PancakeView>
-                <StackLayout HorizontalOptions="Center">
-                    <StackLayout>
-                        <Label Text="{Binding SelectedMusic.Title}" TextColor="Black" FontSize="25" HorizontalOptions="Center"/>
-                        <Label Text="{Binding SelectedMusic.Artist}" TextColor="Black" FontSize="15" Opacity="0.5" HorizontalOptions="Center"/>
+            <Frame BackgroundColor="#ffffff" Margin="0, 0, 0, -40" VerticalOptions="FillAndExpand" CornerRadius="50">
+                <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="1.2*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <StackLayout Grid.Row="1" Spacing="25" HorizontalOptions="Center" VerticalOptions="Center">
+                        <pv:PancakeView BackgroundColor="White" HeightRequest="170" WidthRequest="170" CornerRadius="85" HorizontalOptions="Center" VerticalOptions="Center" >
+                            <pv:PancakeView BackgroundColor="Gray" HeightRequest="150" WidthRequest="150" CornerRadius="75" HorizontalOptions="Center" VerticalOptions="Center">
+                                <Image x:Name="image" Source="{Binding SelectedMusic.CoverImage}" Aspect="AspectFill" HeightRequest="150" WidthRequest="150" HorizontalOptions="Center" VerticalOptions="Center"/>
+                            </pv:PancakeView>
+                        </pv:PancakeView>
+                        <StackLayout HorizontalOptions="Center">
+                            <StackLayout>
+                                <Label Text="{Binding SelectedMusic.Title}" TextColor="Black" FontSize="25" HorizontalOptions="Center"/>
+                                <Label Text="{Binding SelectedMusic.Artist}" TextColor="Black" FontSize="15" Opacity="0.5" HorizontalOptions="Center"/>
+                            </StackLayout>
+                        </StackLayout>
                     </StackLayout>
-                </StackLayout>
-            </StackLayout>
-            <StackLayout Spacing="100" Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
-                <StackLayout WidthRequest="250"  HorizontalOptions="Center">
-                    <Slider MinimumTrackColor="#D4420C" MaximumTrackColor="#C0C8D4" ThumbColor="#D4420C" Value="{Binding Position.TotalSeconds}" Maximum="{Binding Maximum}" HorizontalOptions="FillAndExpand"/>
-                    <Grid HorizontalOptions="FillAndExpand">
-                        <Label Text="{Binding Position, StringFormat='{0:mm\\:ss}'}" FontSize="12" HorizontalOptions="Start" VerticalOptions="Center"/>
-                        <Label Text="{Binding Duration, StringFormat='{0:mm\\:ss}'}" FontSize="12" HorizontalOptions="End" VerticalOptions="Center"/>
-                    </Grid>
-                </StackLayout>
-                <StackLayout Orientation="Horizontal" Spacing="50" HorizontalOptions="Center">
-                    <pv:PancakeView HeightRequest="40" WidthRequest="40" CornerRadius="20" HorizontalOptions="Center" 
-                            VerticalOptions="Center">
-                        <pv:PancakeView.BackgroundGradientStops>
-                            <pv:GradientStopCollection>
-                                <pv:GradientStop Color="#E3E7EE" Offset="0" />
-                                <pv:GradientStop Color="#FBFBFB" Offset="1" />
-                            </pv:GradientStopCollection>
-                        </pv:PancakeView.BackgroundGradientStops>
-                        <pv:PancakeView.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ChangeCommand}" CommandParameter="P"/>
-                        </pv:PancakeView.GestureRecognizers>
-                        <Image Source="previous.png" HeightRequest="15" WidthRequest="15" HorizontalOptions="Center" VerticalOptions="Center"/>
-                    </pv:PancakeView>
-                    <pv:PancakeView HeightRequest="62" WidthRequest="62" CornerRadius="31" HorizontalOptions="Center" 
-                            VerticalOptions="Center">
-                        <pv:PancakeView.BackgroundGradientStops>
-                            <pv:GradientStopCollection>
-                                <pv:GradientStop Color="#D4420C" Offset="0" />
-                                <pv:GradientStop Color="#F3A283" Offset="1" />
-                            </pv:GradientStopCollection>
-                        </pv:PancakeView.BackgroundGradientStops>
-                        <pv:PancakeView.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding PlayCommand}"/>
-                        </pv:PancakeView.GestureRecognizers>
-                        <Image Source="{Binding PlayIcon}" HeightRequest="21" WidthRequest="21" HorizontalOptions="Center" VerticalOptions="Center"/>
-                    </pv:PancakeView>
-                    <pv:PancakeView HeightRequest="40" WidthRequest="40" CornerRadius="20" HorizontalOptions="Center" 
-                            VerticalOptions="Center">
-                        <pv:PancakeView.BackgroundGradientStops>
-                            <pv:GradientStopCollection>
-                                <pv:GradientStop Color="#E3E7EE" Offset="0" />
-                                <pv:GradientStop Color="#FBFBFB" Offset="1" />
-                            </pv:GradientStopCollection>
-                        </pv:PancakeView.BackgroundGradientStops>
-                        <pv:PancakeView.GestureRecognizers>
-                            <TapGestureRecognizer Command="{Binding ChangeCommand}" CommandParameter="N"/>
-                        </pv:PancakeView.GestureRecognizers>
-                        <Image Source="next.png" HeightRequest="15" WidthRequest="15" HorizontalOptions="Center" VerticalOptions="Center"/>
-                    </pv:PancakeView>
-                </StackLayout>
-            </StackLayout>
-        </Grid>
+                    <StackLayout Spacing="100" Grid.Row="2" HorizontalOptions="FillAndExpand" VerticalOptions="StartAndExpand">
+                        <StackLayout WidthRequest="250"  HorizontalOptions="Center">
+                            <Slider MinimumTrackColor="#3e20b6" MaximumTrackColor="#C0C8D4" ThumbColor="#3e20b6" Value="{Binding Position.TotalSeconds}" Maximum="{Binding Maximum}" HorizontalOptions="FillAndExpand"/>
+                            <Grid HorizontalOptions="FillAndExpand">
+                                <Label Text="{Binding Position, StringFormat='{0:mm\\:ss}'}" FontSize="12" HorizontalOptions="Start" VerticalOptions="Center"/>
+                                <Label Text="{Binding Duration, StringFormat='{0:mm\\:ss}'}" FontSize="12" HorizontalOptions="End" VerticalOptions="Center"/>
+                            </Grid>
+                        </StackLayout>
+                        <StackLayout Orientation="Horizontal" Spacing="50" HorizontalOptions="Center">
+                            <pv:PancakeView HeightRequest="40" WidthRequest="40" CornerRadius="20" HorizontalOptions="Center" 
+                            VerticalOptions="Center" BackgroundColor="#ffffff">
+                                <pv:PancakeView.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding ChangeCommand}" CommandParameter="P"/>
+                                </pv:PancakeView.GestureRecognizers>
+                                <Image Source="previous.png" HeightRequest="25" WidthRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
+                            </pv:PancakeView>
+                            <pv:PancakeView HeightRequest="72" WidthRequest="72" CornerRadius="50" HorizontalOptions="Center" 
+                            VerticalOptions="Center" BackgroundColor="#3e20b6">
+                                <pv:PancakeView.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding PlayCommand}"/>
+                                </pv:PancakeView.GestureRecognizers>
+                                <Image Source="{Binding PlayIcon}" HeightRequest="28" WidthRequest="28" HorizontalOptions="Center" VerticalOptions="Center"/>
+                            </pv:PancakeView>
+                            <pv:PancakeView HeightRequest="40" WidthRequest="40" CornerRadius="20" HorizontalOptions="Center" 
+                            VerticalOptions="Center" BackgroundColor="#ffffff">
+                                <pv:PancakeView.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding ChangeCommand}" CommandParameter="N"/>
+                                </pv:PancakeView.GestureRecognizers>
+                                <Image Source="next.png" HeightRequest="25" WidthRequest="25" HorizontalOptions="Center" VerticalOptions="Center"/>
+                            </pv:PancakeView>
+                        </StackLayout>
+                    </StackLayout>
+                </Grid>
+            </Frame>
+        </StackLayout>
     </pv:PancakeView>
-
 </ContentPage>
 
