--- a/NeuroHack/NeuroHack/MainPage.xaml
+++ b/NeuroHack/NeuroHack/MainPage.xaml
@@ -22,11 +22,16 @@
                 <StackLayout Margin="40,0,40,0" VerticalOptions="Center" HorizontalOptions="FillAndExpand">
                     <Grid Margin="0, 40, 0, 40">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="60"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <Frame Grid.Column="1" BackgroundColor="#3e20b6" Margin="0, 0, -100, 0" HeightRequest="20" CornerRadius="50">
-                        </Frame>
+                        <pv:PancakeView Grid.Column="0" HeightRequest="40" WidthRequest="40" CornerRadius="50" BackgroundColor="#3e20b6">
+                            <pv:PancakeView.GestureRecognizers>
+                                <TapGestureRecognizer Command="{Binding MusicSettings}"/>
+                            </pv:PancakeView.GestureRecognizers>
+                            <Image Source="settings.png" HeightRequest="15" WidthRequest="15" HorizontalOptions="Center" VerticalOptions="Center"/>
+                        </pv:PancakeView>
+                        <Frame Grid.Column="1" BackgroundColor="#3e20b6" Margin="0, 0, -100, 0" HeightRequest="20" CornerRadius="50"></Frame>
                     </Grid>
                     <Label Text="{Binding RecentMusic.Title}" TextColor="White" HorizontalOptions="End" FontAttributes="Bold" FontSize="37"/>
                     <Label Text="{Binding RecentMusic.Artist}" TextColor="White" HorizontalOptions="End" FontAttributes="Bold" FontSize="22" Opacity="0.8"/>
@@ -48,7 +53,7 @@
                                         <ColumnDefinition Width="Auto"/>
                                     </Grid.ColumnDefinitions>
                                     <StackLayout VerticalOptions="Center">
-                                        <Label Text="{Binding Title}" TextColor="Black" FontAttributes="Bold" FontSize="17"/>
+                                        <Label Text="{Binding Title}" TextColor="Black" Margin="0, 0, 40, 0" FontAttributes="Bold" FontSize="17"/>
                                         <Label Text="{Binding Artist}" TextColor="Black" FontSize="12" Opacity="0.5"/>
                                     </StackLayout>
                                     <pv:PancakeView HeightRequest="40" WidthRequest="40" CornerRadius="20" HorizontalOptions="End" VerticalOptions="Center" >
