--- a/NeuroHack/NeuroHack/MessageBox.xaml
+++ b/NeuroHack/NeuroHack/MessageBox.xaml
@@ -3,16 +3,27 @@
               xmlns="http://xamarin.com/schemas/2014/forms"
               xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
               xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-           xmlns:xforms="clr-namespace:Syncfusion.SfRangeSlider.XForms;assembly=Syncfusion.SfRangeSlider.XForms"
-           x:Class="NeuroHack.MessageBox">
-
-    <Frame HeightRequest="200" WidthRequest="200" VerticalOptions="Center" HorizontalOptions="Center" CornerRadius="20">
-        <StackLayout>
-            <xforms:SfRangeSlider ToolTipTextColor="Black"></xforms:SfRangeSlider>
-            <Slider></Slider>
-            <Slider></Slider>
-            <Slider></Slider>
-            <Slider></Slider>
-        </StackLayout>
-    </Frame>
+              Size="300, 500"
+            x:Class="NeuroHack.MessageBox">
+    <StackLayout BackgroundColor="Transparent">
+        <Frame WidthRequest="300" HeightRequest="500">
+            <StackLayout>
+                <Label Text="Amusing"></Label>
+                <xct:RangeSlider x:Name="SliderAmusing" Margin="0, 5, 0, 0" TrackColor="White" MinimumValue="0" 
+                             MaximumValue="100" TrackHighlightColor="#6e62e4"></xct:RangeSlider>
+                <Label Text="Beatyful"></Label>
+                <xct:RangeSlider x:Name="SliderBeatyful" Margin="0, 5, 0, 0" TrackColor="White" MinimumValue="0" 
+                        MaximumValue="100" TrackHighlightColor="#6e62e4"></xct:RangeSlider>
+                <Label Text="Dreamy"></Label>
+                <xct:RangeSlider x:Name="SliderDreamy" Margin="0, 5, 0, 0" TrackColor="White" MinimumValue="0" 
+                        MaximumValue="100" TrackHighlightColor="#6e62e4"></xct:RangeSlider>
+                <Label Text="Annoying"></Label>
+                <xct:RangeSlider x:Name="SliderAnnoying" Margin="0, 5, 0, 0" TrackColor="White" MinimumValue="0" 
+                        MaximumValue="100" TrackHighlightColor="#6e62e4"></xct:RangeSlider>
+                <Button x:Name="FilterButton"  Text="Применить" BorderColor="Transparent" BackgroundColor="#6e62e4" TextColor="White"
+                    FontAttributes="Bold" CornerRadius="20" Margin="0, 20, 0, 0">
+                </Button>
+            </StackLayout>
+        </Frame>
+    </StackLayout>
 </xct:Popup>
