--- a/NeuroHack/NeuroHack/MessageBox.xaml
+++ b/NeuroHack/NeuroHack/MessageBox.xaml
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<xct:Popup xmlns:rg="http://rotorgames.com" 
-              xmlns="http://xamarin.com/schemas/2014/forms"
-              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-              xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit"
-              Size="300, 500"
-            x:Class="NeuroHack.MessageBox">
+<xct:Popup xmlns="http://xamarin.com/schemas/2014/forms"
+           xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+           xmlns:xct="clr-namespace:Xamarin.CommunityToolkit.UI.Views;assembly=Xamarin.CommunityToolkit" 
+           x:Class="NeuroHack.MessageBox"
+           Size="300, 500">
     <StackLayout BackgroundColor="Transparent">
         <Frame WidthRequest="300" HeightRequest="500">
             <StackLayout>
